# py_fastpapi_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
