[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Roman Matveev "]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fastapi_project"
version = "0.1.0"
description = "A FastAPI project."
#homepage = "https://github.com/username/fastapi_project"

[project.dependencies]
fastapi = "^0.100.0"
SQLAlchemy = "^2.0.20"

[project.dev-dependencies]
pytest = "^7.0.0."
pre-commit = "^3.0.0"
mypy = "^1.5.1"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

